# evolver.py

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh.md  SKILL.md  TODO.md  memory-openclaw-comparison.md  pyproject.toml  演进方案.md  设计方案.md
.evolver/: skill-updater-state.json  workspace-id
.evolver/gep/: autopoiesis_rules.json  events.jsonl  genes.jsonl  pending_signals.json
.github/workflows/: evolver.yml
evolver/.config/: disk_flags.json  stake_state.json
examples/: README.md  recipe.manifest.json
examples/atp-quickstart/: README.md  demo_atp_loop.py
examples/daemon-loop/: README.md
examples/hello-world/: README.md
examples/hub-publish-flow/: README.md
examples/ide-hooks/: README.md
examples/proxy-basics/: README.md
examples/self-report/: README.md
examples/skill2recipe/: README.md
examples/solo-mode/: README.md
memory/: llm-reviews.jsonl  validator-reports-queue.jsonl
memory/evolution/: LESSONS_LEARNED.md  autopoiesis.jsonl  autopoiesis_preflight_abort.json  conversation_sniffer_state.json  cycle_progress.json  evolution_solidify_state.json  innovation_log.jsonl  memory_graph.jsonl  memory_graph_state.json  self_report.json
memory/evolution/2271c2e449aeac78/: conversation_sniffer_state.json  memory_graph.jsonl
scripts/: a2a_export.py  a2a_ingest.py  a2a_promote.py  analyze_by_skill.py  build_binaries.py  check_changelog.py  extract_log.py  generate_history.py  gep_append_event.py  gep_personality_report.py  human_report.py  recall_verify_report.py  recover_loop.py  seed_merchants.py  suggest_version.py  validate_modules.py  validate_suite.py
src/evolver/: __init__.py  __main__.py  canary.py  cli.py  config.py  cycle_control.py  force_update.py  uv_runtime.py
src/evolver/adapters/: __init__.py  auth.py  claude_code.py  codex.py  cursor.py  hook_adapter.py  kiro.py  opencode.py  reset_secret.py  setup_hooks.py
src/evolver/atp/: __init__.py  atp_execute.py  atp_task_pickup.py  auto_buyer.py  auto_deliver.py  cli.py  cli_autobuy_prompt.py  client.py  consumer_agent.py  default_handler.py  heartbeat_signals_handler.py  hub_client.py  merchant_agent.py  protocol.py  question_composer.py  service_helper.py  settlement.py
src/evolver/evolve/: __init__.py  guards.py  post_cycle.py  runner.py  utils.py
src/evolver/experiment/: __init__.py  agent_runner.py  cli.py  comparison.py  metrics.py
src/evolver/gep/: __init__.py  a2a_protocol.py  analyzer.py  anti_abuse_telemetry.py  asset_call_log.py  asset_store.py  assets.py  auto_distill_conv.py  auto_distill_llm.py  autopoiesis.py  autopoiesis_rules.py  bridge.py  candidate_eval.py  candidates.py  canonical_identity_lock.py  claim_nudge.py  cli_contracts.py  cognition.py  content_hash.py  conversation_distiller.py  conversation_sniffer.py  crypto.py  curriculum.py  device_id.py  directory_client.py  discovery.py  distill.py  env_fingerprint.py  epigenetics.py  exec_bridge.py  execution_trace.py  explore.py  feature_flags.py  fetch.py  git_ops.py  hash_utils.py  host_error_classifier.py  hub_fetch.py  hub_gate.py  hub_review.py  (+50 more)
src/evolver/ops/: __init__.py  auth_middleware.py  cleanup.py  commentary.py  health_check.py  innovation.py  lifecycle.py  narrative.py  self_repair.py  skills_monitor.py  sqlite_store.py  trigger.py
src/evolver/proxy/: asset_publish.py  client_settings.py  envelope.py  event_delivery.py  inject.py  server.py  token.py
src/evolver/recipe/: cache.py  client.py
src/evolver/solo/: __init__.py  breaker.py  git_guard.py
src/evolver/webui/: __init__.py  app.py  dashboard.py
tests/: conftest.py  test_a2a_protocol.py  test_adapters_claude_code.py  test_adapters_codex.py  test_adapters_hook.py  test_adapters_kiro.py  test_adapters_opencode.py  test_adapters_runtime_paths.py  test_adapters_session_end.py  test_adapters_session_start.py  test_adapters_signal_detect.py  test_anti_abuse_heartbeat.py  test_asset_store.py  test_atp.py  test_atp_default_handler.py  test_atp_sprint6.py  test_auth.py  test_auth_middleware.py  test_bridge.py  test_cleanup.py  test_cli.py  test_cli_atp_args.py  test_config.py  test_content_hash.py  test_crypto.py  test_cycle_control.py  test_discovery.py  test_distill.py  test_e2e_sprint14.py  test_exec.py  test_execution_trace.py  test_experiment.py  test_fetch.py  test_force_update.py  test_gep_analyzer.py  test_gep_bridge.py  test_gep_conversation_sniffer.py  test_gep_exec_bridge.py  test_gep_hub_fetch.py  test_gep_hub_review.py  (+64 more)
tests/conformance/: test_savings_core_conformance.py
tests/evolve/: test_post_cycle.py  test_utils.py
tests/evolve/pipeline/: test_signals_preflight.py
tests/gep/: test_asset_call_log.py  test_atp_commercial_loop.py  test_atp_heartbeat_signals.py  test_auto_distill.py  test_autopoiesis.py  test_autopoiesis_integration.py  test_autopoiesis_p3.py  test_candidate_eval.py  test_candidates.py  test_canonical_identity_lock.py  test_cli_contracts.py  test_cognition.py  test_conversation_distiller.py  test_curriculum.py  test_enrich_memory_bridge.py  test_epigenetics.py  test_explore.py  test_feature_flags.py  test_gep_assets.py  test_host_error_classifier.py  test_identity_tuple_sync.py  test_idle_scheduler.py  test_issue_reporter.py  test_learning_signals.py  test_living_memory.py  test_llm_review.py  test_local_state_awareness.py  test_memory_bridge.py  test_memory_bridge_sync.py  test_node_id_resolution.py  test_open_pr_registry.py  test_policy_check.py  test_privacy_client.py  test_question_generator.py  test_recall_inject.py  test_recall_verifier.py  test_reflection.py  test_self_pr.py  test_self_report.py  test_skill2gep.py  (+7 more)
tests/gep/trajectory/: test_builder.py  test_crypto.py  (+7 more)
tests/ops/: test_lifecycle_proxy_health.py
tests/proxy/: test_client_settings.py  test_conversation_distill_route.py  test_event_delivery.py  test_lifecycle_node_id_unification.py  test_lifecycle_round5.py  test_proxy_token.py
tests/scripts/: test_tool_scripts.py
tests/solo/: test_solo.py
tests/webui/: test_dashboard_sse.py  test_http_server.py  test_sse_stream.py
(+136 files in other folders)
