[project]
name = "evolver"
version = "1.89.14"
description = "A GEP-powered self-evolution engine for AI agents (Python port of @evomap/evolver)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "EvoMap", email = "team@evomap.ai" },
]
keywords = ["evomap", "ai", "evolution", "gep", "meta-learning", "self-repair", "automation", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "httpx[http2]>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "cryptography>=43.0",
    "filelock>=3.16",
    "psutil>=6.0",
    "GitPython>=3.1",
    "boto3>=1.35",
    "keyring>=25.4",
]

[project.scripts]
evolver = "evolver.cli:main"

[project.urls]
Homepage = "https://evomap.ai"
Repository = "https://github.com/EvoMap/evolver"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evolver"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
    "freezegun>=1.5",
    "pytest-timeout>=2.4.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "ARG",
    "PL",
    "RUF",
]
ignore = [
    "PLR2004",  # magic value comparisons often useful in port
    "PLR0913",  # many arguments inherited from Node design
]

[tool.ruff.lint.per-file-ignores]
# Self-contained HTML / embedded hook scripts — line breaks harm readability
"src/evolver/webui/dashboard.py" = ["E501", "RUF001"]
"src/evolver/adapters/opencode.py" = ["E501"]
"src/evolver/adapters/setup_hooks.py" = ["E501"]
# Proxy route modules — lazy httpx import, nested async with, many error
# returns, and unused `request` param are the established pattern
# (matches messages_route.py).
"src/evolver/proxy/router/gemini_route.py" = ["E501", "PLC0415", "SIM117", "ARG001", "PLR0911"]
"src/evolver/proxy/router/vertex_route.py" = ["E501", "PLC0415", "SIM117", "ARG001", "PLR0911"]
"src/evolver/proxy/router/ollama_route.py" = ["E501", "PLC0415", "SIM117", "ARG001", "PLR0911"]
"src/evolver/proxy/router/responses_route.py" = ["E501", "PLC0415", "SIM117", "ARG001", "PLR0911"]
"src/evolver/proxy/router/messages_route.py" = ["PLC0415", "SIM117", "PLR0911", "ARG001"]
"src/evolver/proxy/router/model_router.py" = ["PLR0911"]
"src/evolver/proxy/router/models_route.py" = ["PLC0415"]
# Lifecycle manager — pre-established async patterns (lazy imports, task creation, ternary)
"src/evolver/proxy/lifecycle/manager.py" = ["B904", "SIM102", "RUF006", "PLC0415", "SIM108", "N817"]
# Observer modules — lazy path imports by design (must defer until .env loaded)
"src/evolver/webui/observer/assets.py" = ["PLC0415", "PLW2901"]
"src/evolver/webui/observer/interactions.py" = ["PLC0415"]
"src/evolver/webui/observer/runs.py" = ["PLC0415"]
"src/evolver/webui/observer/health.py" = ["PLC0415"]
"src/evolver/webui/observer/lifecycle_obs.py" = ["PLC0415"]
"src/evolver/webui/observer/narrative_obs.py" = ["PLW2901"]
"src/evolver/webui/observer/skills.py" = ["PLC0415"]
"src/evolver/webui/observer/commentary_obs.py" = ["PLC0415"]
"src/evolver/webui/server/routes.py" = ["PLC0415"]
# Commentary module — Chinese fullwidth punctuation is intentional
"src/evolver/ops/commentary.py" = ["RUF001", "PLC0415"]
# evolve/utils.py — lazy hashlib import, loop strip() pattern
"src/evolver/evolve/utils.py" = ["PLC0415", "PLW2901"]
# evolve/guards.py — lazy imports for env-var-sensitive paths, pre-existing patterns
"src/evolver/evolve/guards.py" = ["PLC0415", "ARG001", "PLR0911"]
# Observer pipeline_events — lazy path import pattern
"src/evolver/webui/observer/pipeline_events.py" = ["PLC0415"]
# Adapter scripts — lazy imports for env-var-sensitive paths + scope API compat
"src/evolver/adapters/scripts/session_start.py" = ["PLC0415"]
"src/evolver/adapters/scripts/session_end.py" = ["PLC0415", "F841"]
"src/evolver/adapters/scripts/memory_filtering.py" = ["ARG001", "PLR0912"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
